# prospectio-api-mcp

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  glama.json  pyproject.toml  pyrightconfig.json
.gemini/: copilot-instructions.md  settings.json  settings_exemple.json
.github/: copilot-instructions.md
.github/workflows/: cd.yaml  ci.yaml
curls/: list.http
database/: init.sql
prospectio_api_mcp/: config.py  main.py  mcp_routes.py
prospectio_api_mcp/application/api/: leads_routes.py  mcp_routes.py  profile_routes.py  routes.py
prospectio_api_mcp/application/requests/: insert_leads.py
prospectio_api_mcp/application/use_cases/: generate_message.py  get_leads.py  insert_leads.py  profile.py
prospectio_api_mcp/domain/entities/: company.py  compatibility_score.py  contact.py  job.py  leads.py  leads_result.py  profile.py  prospect_message.py  task.py  work_experience.py
prospectio_api_mcp/domain/ports/: company_jobs.py  compatibility_score.py  enrich_leads.py  generate_message.py  leads_repository.py  profile_respository.py  task_manager.py
prospectio_api_mcp/domain/prompts/: company_decision.md  company_description.md  company_info.md  compatibility_score.md  contact_info.md  job_titles.md  prospecting_message.md
prospectio_api_mcp/domain/services/: prompt_loader.py
prospectio_api_mcp/domain/services/leads/: active_jobs_db.py  jsearch.py  leads_processor.py  mantiks.py  mock.py  strategy.py
prospectio_api_mcp/infrastructure/api/: client.py  llm_client_factory.py  llm_generic_client.py
prospectio_api_mcp/infrastructure/dto/database/: base.py  company.py  contact.py  job.py  profile.py  work_experience.py
prospectio_api_mcp/infrastructure/dto/mantiks/: company.py  company_response.py  job.py  location.py  salary.py
prospectio_api_mcp/infrastructure/dto/rapidapi/: active_jobs_db.py  jsearch.py
prospectio_api_mcp/infrastructure/services/: active_jobs_db.py  compatibility_score.py  generate_message.py  jsearch.py  leads_database.py  mantiks.py  mock.py  profile_database.py  task_manager.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/: agent.py  nodes.py  state.py
src/: config.py  main.py  mcp_routes.py  prospect_strategy_factory.py  strategy_factory.py
src/application/api/: routes.py
src/application/dto/mantiks/: company.py  location.py
src/application/ports/: get_leads.py  prospect_api.py
src/application/strategies/leads/: mantiks.py  strategy.py
src/application/use_cases/: get_leads.py  strategy.py
src/domain/entities/: leads.py
src/domain/leads/: apollo.py  clearbit.py  cognism.py  dropcontact.py  hunter.py  leadgenius.py  lusha.py  mantiks.py  peopledatalabs.py  scrubby.py  zoominfo.py
src/domain/ports/: company_jobs.py  prospect_api.py
src/infrastructure/api/: client.py  prospect_routes.py  routes.py
src/infrastructure/services/: active_jobs_db.py  apollo.py  clearbit.py  cognism.py  dropcontact.py  hunter.py  jsearch.py  leadgenius.py  lusha.py  mantiks.py  mock.py  peopledatalabs.py  scrubby.py  zoominfo.py
tests/ut/: test_1_profile_use_case.py  test_active_jobs_db_use_case.py  test_get_leads.py  test_get_leads_use_case.py  test_jsearch_use_case.py  test_mantiks_use_case.py  test_profile.py  test_profile_use_case.py
(+47 files in other folders)
