[project]
name = "prospectio-api-mcp"
version = "0.1.0"
description = "Prospectio MCP API"
authors = [
    {name = "Yohan Goncalves", email = "yohan.goncalves.pro@gmail.com"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.12.7"
dependencies = [
    "pydantic==2.10.3",
    "httpx==0.28.1",
    "mcp==1.10.1",
    "fastapi[standard]==0.115.14",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "prospectio_api_mcp"
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poetry]
name = "prospectio-api-mcp"
version = "0.1.0"
description = "Prospectio MCP API"
authors = ["Yohan Goncalves <yohan.goncalves.pro@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12.7"
pydantic = "2.10.3"
httpx = "0.28.1"
mcp = "1.10.1"
fastapi = { version = "0.115.14", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
