[project]
name = "prospectio_api_mcp"
version = "0.1.0"
description = "Prospectio MCP API"
authors = [
    {name = "Yohan Goncalves", email = "yohan.goncalves.pro@gmail.com"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.12.7"

[tool.pytest.ini_options]
pythonpath = ["prospectio_api_mcp"]
addopts = ["-v", "--tb=short"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poetry]
name = "prospectio_api_mcp"
version = "0.1.0"
description = "Prospectio MCP API"
authors = ["Yohan Goncalves <yohan.goncalves.pro@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12.7"
pydantic = "2.10.3"
httpx = {extras = ["http2"], version = "0.28.1"}
mcp = "1.10.1"
fastapi = { version = "0.115.14", extras = ["standard"]}
psycopg = "3.2.4"
psycopg-binary = "3.2.4"
SQLAlchemy = "2.0.41"
asyncpg = "0.30.0"
greenlet = "3.2.3"
langchain = "0.3.26"
langchain-core = "0.3.70"
langchain-ollama = "0.3.5"
langchain-community = "0.3.27"
langchain-mistralai = "0.2.11"
langchain-google-genai = "2.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
